loopfor.LoopFor.scala.error
Compilation error:
LoopFor:2: error: not found: value isoverBaggle
while (!isoverBaggle()) {forward(); x=x+1}
        ^