loopfor.LoopFor.scala.code
var x:Int=0
while (!isoverBaggle()) {forward(); x=x+1}
pickupBaggle()
for (stepper<-1 to x) {forward()}
dropBaggle()